--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ Variables
   /* --clr-primary-1: hsl(43, 86%, 17%); */
   --clr-primary-1: hsl(184, 91%, 17%);
   --clr-primary-2: hsl(185, 84%, 25%);
-  --clr-primary-3: hsl(185, 81%, 29%);
+  --clr-primary-3: #0e7c86;
   --clr-primary-4: hsl(184, 77%, 34%);
   --clr-primary-5: #2caeba;
   /* lighter shades of primary color */
@@ -290,7 +290,7 @@ p {
 
 /*
 =============== 
-Navbar
+Navbar and drawer
 ===============
 */
 
@@ -364,6 +364,18 @@ Navbar
 .nav-links {
   display: none;
 }
+
+.header-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.drawer-social-icons {
+  margin-top: 0.8rem;
+}
+
 @media screen and (min-width: 768px) {
   .nav-links {
     display: flex;
@@ -861,7 +873,7 @@ experience
 }
 
 .badge-icon {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 @media screen and (min-width: 676px) {
