--- a/src/css/main.css
+++ b/src/css/main.css
@@ -371,10 +371,23 @@ Navbar and drawer
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 1rem;
 }
 
 .drawer-social-icons {
   margin-top: 0.8rem;
+}
+
+.copyright {
+  color: var(--clr-grey-11);
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+  padding-top: 0.8rem;
+}
+
+.copyright > p {
+  color: var(--clr-grey-11);
 }
 
 @media screen and (min-width: 768px) {
